change some code smells